use koa-views/mustache instand of swig

--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+{{title}} spends2345 {{calc}}
+<br>
+{{> more}}
 
 <div id="app"></div>
 
