--- a/views/index.mustache
+++ b/views/index.mustache
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-{{title}} spends2345 {{calc}}
+{{title}} this is a template demo. {{calc}}
 <br>
 {{> more}}
 
